feat(localnet): initial integration with upcoming verifier
