# crates/ton-localnet/src/server/router.rs
@@ -8,11 +8,11 @@ use super::handlers::{
     get_libraries, get_masterchain_info, get_nft_items, get_out_msg_queue_size,
     get_pending_transactions_v3, get_shard_account_cell, get_shards, get_startup_wallets,
     get_status, get_traces, get_transactions, get_transactions_by_message_v3, get_transactions_std,
-    get_transactions_v3, json_rpc, load_state, lookup_block, pack_address, register_compiler_abis,
-    run_get_method, run_get_method_std, run_get_method_v3, send_boc, send_boc_return_hash,
-    send_internal_message, send_message_v3, set_address_name, set_network_conditions,
-    set_shard_account, streaming_sse, streaming_ws, try_locate_result_tx, try_locate_source_tx,
-    try_locate_tx, unpack_address,
+    get_transactions_v3, get_verified_source, json_rpc, load_state, lookup_block, pack_address,
+    register_compiler_abis, run_get_method, run_get_method_std, run_get_method_v3, send_boc,
+    send_boc_return_hash, send_internal_message, send_message_v3, set_address_name,
+    set_network_conditions, set_shard_account, streaming_sse, streaming_ws, try_locate_result_tx,
+    try_locate_source_tx, try_locate_tx, unpack_address,
 };
 use crate::server::{
     ApiCallAlreadyRecorded, ApiCallFamily, ApiCallInput, ApiCallLog, ApiCallType,
@@ -134,6 +134,7 @@ pub fn create_router(state: ServerState, rate_limit_rps: Option<u32>) -> Router 
         .route("/acton_getAddressName", get(get_address_name))
         .route("/acton_setAddressName", post(set_address_name))
         .route("/acton_getCompilerAbi", get(get_compiler_abi))
+        .route("/acton_getVerifiedSource", get(get_verified_source))
         .route("/acton_registerCompilerAbis", post(register_compiler_abis))
         .route("/acton_dumpState", post(dump_state))
         .route("/acton_loadState", post(load_state))
